--- a/style.css
+++ b/style.css
@@ -1,22 +1,6 @@
-body
+*
 {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
-    color: black;
-    background-color: wheat;
-}
-
-button
-{
-    padding: 20px 40px;
-    background-color: gray;
-    color: white;
-    border: 2px;
-    border-color: black;
-    cursor: pointer;
-}
-
-button:hover
-{
-    background-color: rgb(172, 168, 168);
+    margin: 0%;
+    padding: 0%;
+    overflow: hidden;
 }
