--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-*
+.grid-container
 {
-    margin: 0%;
-    padding: 0%;
-    overflow: hidden;
+    display: grid;
+    grid-template-columns: 10px 10px 10px 10px 10px;
+    padding: 1px;
+}
+
+.grid-item
+{
 }
