--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
-.grid-container
+body, html
 {
-    display: grid;
-    grid-template-columns: 10px 10px 10px 10px 10px;
-    padding: 1px;
+    height: 100%;
+    margin: 0;
+}
+
+#grid-container
+{
+    height: 100vh;
+    width: 100vw;
+    grid-template-columns: repeat(auto-fill, minmax(12px,1fr));
 }
 
 .grid-item
 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+    border: 1px solid black;
 }
