--- a/style.css
+++ b/style.css
@@ -1,21 +1,26 @@
-body, html
-{
+body, html, button
+{   
     height: 100%;
     margin: 0;
+    font-family: "Consolas", monospace;
+    font-size: 11px;
 }
 
-#grid-container
-{
-    height: 100vh;
-    width: 100vw;
-    grid-template-columns: repeat(auto-fill, minmax(12px,1fr));
-}
-
-.grid-item
+section
 {
     display: flex;
+}
+
+button
+{
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
+    display: flex;
+    outline: none;
+    width: 12px;
+    height: 12px;
     justify-content: center;
     align-items: center;
-    font-size: 10px;
-    border: 1px solid black;
 }
