--- a/style.css
+++ b/style.css
@@ -11,6 +11,17 @@ section
     display: flex;
 }
 
+#screen
+{
+    display: grid;
+    justify-content: space-around;
+    align-items: stretch;
+
+    padding: 0;
+    margin: 0;
+}
+
+
 button
 {
     padding: 0;
